--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -34,6 +34,7 @@
     "search": "Search",
     "select": "Select",
     "selectMultiple": "Select multiple",
+    "deselectMultiple": "Deselect multiple",
     "share": "Share",
     "shell": "Toggle shell",
     "submit": "Submit",
